--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Керамогранит Casalgrande Padana официальный представитель в России</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Керамогранит от Casalgrande Padana Италия в Москве по ценам фабрики. Поставки со склада и под заказ любых объемов.">
+	<meta name="description"
+		content="Керамогранит от Casalgrande Padana Италия в Москве по ценам фабрики. Поставки со склада и под заказ любых объемов.">
 	<meta name="keywords" content="керамогранит casalgrande padana">
 	<link rel="icon" href="img/favicon.png" type="image/x-icon">
- 	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
- 	<meta property="og:title" content="">
- 	<meta property="og:description" content="">
- 	<meta property="og:type" content="article">
- 	<meta property="og:image" content="#">
- 	<meta property="og:site_name" content="">
- 	<!-- Google Fonts -->
- 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
+	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+	<meta property="og:title" content="">
+	<meta property="og:description" content="">
+	<meta property="og:type" content="article">
+	<meta property="og:image" content="#">
+	<meta property="og:site_name" content="Lucido">
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700&display=swap&subset=cyrillic-ext"
+		rel="stylesheet">
 	<!-- Bootstrap Reboot CSS -->
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<!-- Bootstrap CSS -->
@@ -27,6 +30,7 @@
 	<!-- Main CSS -->
 	<link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
 	<header id="header">
 		<div class="header-top">
@@ -68,8 +72,8 @@
 					<div class="col-3 d-lg-none">
 						<div class="menu-content">
 							<a href="#" class="menu-btn menu-open">
-      							<span></span>
-    						</a>
+								<span></span>
+							</a>
 						</div>
 					</div>
 					<div class="col-6">
@@ -87,7 +91,8 @@
 									Москва, ул. Пречистенка 23
 								</div>
 								<div class="header-address__phone">
-									Телефон <a href="tel:+74957727555" class="header-address__phone_link font-weight-bold">+7 (495) 772-7-555</a>
+									Телефон <a href="tel:+74957727555"
+										class="header-address__phone_link font-weight-bold">+7 (495) 772-7-555</a>
 								</div>
 							</div>
 						</div>
@@ -107,7 +112,8 @@
 					<div class="col">
 						<div class="header__offer">
 							<h1 class="header__title">
-								<span class="font-weight-bold">Керамогранит Casalgrande Padana</span><br>в Москве по цене производителя 
+								<span class="font-weight-bold">Керамогранит Casalgrande Padana</span><br>в Москве по
+								цене производителя
 							</h1>
 							<div class="header__subtitle">
 								<div class="header__text">
@@ -124,13 +130,20 @@
 							<img src="img/header-img.jpg" alt="Производство" class="header__img">
 							<div class="header-card">
 								<div class="header-card__title">
-									Итальянская фабрика <span class="text__orange">Casalgrande Padana</span> производит плитку из керамогранита более пятидесяти лет. За это время компании удалось стать одной из самых известных на рынке.
+									Итальянская фабрика <span class="text__orange">Casalgrande Padana</span> производит
+									плитку из керамогранита более пятидесяти лет. За это время компании удалось стать
+									одной из самых известных на рынке.
 								</div>
 								<p class="header-card__text">
-									Отличительной особенностью фабрики является 100% национальная идентичность – разработки и производство проводятся исключительно в Италии. Именно это позволяет поддерживать стабильно великолепные дизайн и качество производства. Ежегодно силами тысячи сотрудников производится 24 миллиона квадратных метров плитки.
+									Отличительной особенностью фабрики является 100% национальная идентичность –
+									разработки и производство проводятся исключительно в Италии. Именно это позволяет
+									поддерживать стабильно великолепные дизайн и качество производства. Ежегодно силами
+									тысячи сотрудников производится 24 миллиона квадратных метров плитки.
 								</p>
 								<p class="header-card__text">
-									Casalgrande Padana постоянно подчеркивает свою заботу об окружающей среде – благодаря использованию натуральных материалов и передовых технологий, влияние производства на окружающую среду минимизировано.
+									Casalgrande Padana постоянно подчеркивает свою заботу об окружающей среде –
+									благодаря использованию натуральных материалов и передовых технологий, влияние
+									производства на окружающую среду минимизировано.
 								</p>
 							</div>
 						</div>
@@ -144,85 +157,116 @@
 			<div class="row">
 				<div class="col">
 					<h2 class="products__title">
-						Основные коллекции керамогранита <span class="text__orange font-weight-bold">Casalgrande Padana</span>
+						Основные коллекции керамогранита <span class="text__orange font-weight-bold">Casalgrande
+							Padana</span>
 					</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-lg-4">
 					<div class="product__card">
-						<div class="product__img" style="background: url(img/Kontinua-Marmoker.jpg) no-repeat center center / cover;"></div>
+						<div class="product__img"
+							style="background: url(img/Kontinua-Marmoker.jpg) no-repeat center center / cover;"></div>
 						<div class="product__info">
 							<div class="product__title">
 								Kontinua Marmoker
 							</div>
 							<p class="product__text">
-								Это новая коллекция крупноформатного керамогранита от фабрики Casalgrande Padana, воссоздающая оттенки ценных пород мрамора. В серии только керамогранит большого формата – 118*258 (120*260 см), 118*236 (120*240 см), 118*118 (120*120 см) и 118*59 см. Kontinua Marmoker позволяет создавать новые дизайнерские решения благодаря современной технологии производства тонкого керамогранита огромного размера толщиной всего 6,5 мм. Эта новейшая коллекция представлена в 19 восхитительных цветах и двух поверхностях – naturale и lucido.
+								Это новая коллекция крупноформатного керамогранита от фабрики Casalgrande Padana,
+								воссоздающая оттенки ценных пород мрамора. В серии только керамогранит большого формата
+								– 118*258 (120*260 см), 118*236 (120*240 см), 118*118 (120*120 см) и 118*59 см. Kontinua
+								Marmoker позволяет создавать новые дизайнерские решения благодаря современной технологии
+								производства тонкого керамогранита огромного размера толщиной всего 6,5 мм. Эта новейшая
+								коллекция представлена в 19 восхитительных цветах и двух поверхностях – naturale и
+								lucido.
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4">
 					<div class="product__card">
-						<div class="product__img" style="background: url(img/Kontinua-Pietre.jpg) no-repeat center center / cover;"></div>
+						<div class="product__img"
+							style="background: url(img/Kontinua-Pietre.jpg) no-repeat center center / cover;"></div>
 						<div class="product__info">
 							<div class="product__title">
 								Kontinua Pietre
 							</div>
 							<p class="product__text">
-								Еще одна коллекция керамогранита под мрамор для самых взыскательных ценителей красоты. Сочетание неизменного высокого качества и красоты природного камня. Коллекция представлена в четырех крупных форматах до 120х260 см. Девять цветов в натуральной поверхности и специальные декоры. Благодаря новой технологии, толщина плит всего 6,5 см. 
+								Еще одна коллекция керамогранита под мрамор для самых взыскательных ценителей красоты.
+								Сочетание неизменного высокого качества и красоты природного камня. Коллекция
+								представлена в четырех крупных форматах до 120х260 см. Девять цветов в натуральной
+								поверхности и специальные декоры. Благодаря новой технологии, толщина плит всего 6,5 см.
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4">
 					<div class="product__card">
-						<div class="product__img" style="background: url(img/Kontinua-Cemento.jpg) no-repeat center center / cover;"></div>
+						<div class="product__img"
+							style="background: url(img/Kontinua-Cemento.jpg) no-repeat center center / cover;"></div>
 						<div class="product__info">
 							<div class="product__title">
 								Kontinua Cemento
 							</div>
 							<p class="product__text">
-								Kontinua Cemento - это новая коллекция крупноформатного керамогранита от фабрики Casalgrande Padana, воссоздающая все оттенки цемента. В серии только керамогранит огромного формата – 120*260, 120*240, 120*120 см и 118*59 см. Kontinua Cemento- это самая современная технология производства тонкого керамогранита огромного размера толщиной всего 6,5 мм.
+								Kontinua Cemento - это новая коллекция крупноформатного керамогранита от фабрики
+								Casalgrande Padana, воссоздающая все оттенки цемента. В серии только керамогранит
+								огромного формата – 120*260, 120*240, 120*120 см и 118*59 см. Kontinua Cemento- это
+								самая современная технология производства тонкого керамогранита огромного размера
+								толщиной всего 6,5 мм.
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4">
 					<div class="product__card">
-						<div class="product__img" style="background: url(img/Beton.jpg) no-repeat center center / cover;"></div>
+						<div class="product__img"
+							style="background: url(img/Beton.jpg) no-repeat center center / cover;"></div>
 						<div class="product__info">
 							<div class="product__title">
 								Beton
 							</div>
 							<p class="product__text">
-								Новая коллекция Beton расширяет выразительные возможности последнего поколения керамогранита. Современный декоративный эффект под бетонную поверхность направлен на создание интерьеров для современных жилых и коммерческих помещений. Серия представлена в пяти нейтральных тонах и изготавливается в 9 и 10 мм толщине в огромном формате 151*7,5 см, а также в форматах 75,5*75,5 и 75,5*37,5 см.
+								Новая коллекция Beton расширяет выразительные возможности последнего поколения
+								керамогранита. Современный декоративный эффект под бетонную поверхность направлен на
+								создание интерьеров для современных жилых и коммерческих помещений. Серия представлена в
+								пяти нейтральных тонах и изготавливается в 9 и 10 мм толщине в огромном формате 151*7,5
+								см, а также в форматах 75,5*75,5 и 75,5*37,5 см.
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4">
 					<div class="product__card">
-						<div class="product__img" style="background: url(img/Marmoker.jpg) no-repeat center center / cover;"></div>
+						<div class="product__img"
+							style="background: url(img/Marmoker.jpg) no-repeat center center / cover;"></div>
 						<div class="product__info">
 							<div class="product__title">
 								Marmoker
 							</div>
 							<p class="product__text">
-								Коллекция Marmoker была с восторгом принята на всемирной выставке Керамики CERSAIE в Италии. На данный момент – это самая обширная коллекция мраморов и травертинов в больших форматах, представленная на мировом рынке одним производителем. Коллекция включает 35 оттенков, что является уникальным достижением, а также все необходимые спец. элементы, мозаику, декоры и многое другое. Данный продукт обладает уникальными эстетическими и техническими свойствами.
+								Коллекция Marmoker была с восторгом принята на всемирной выставке Керамики CERSAIE в
+								Италии. На данный момент – это самая обширная коллекция мраморов и травертинов в больших
+								форматах, представленная на мировом рынке одним производителем. Коллекция включает 35
+								оттенков, что является уникальным достижением, а также все необходимые спец. элементы,
+								мозаику, декоры и многое другое. Данный продукт обладает уникальными эстетическими и
+								техническими свойствами.
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4">
 					<div class="product__card">
-						<div class="product__img" style="background: url(img/Resina.jpg) no-repeat center center / cover;"></div>
+						<div class="product__img"
+							style="background: url(img/Resina.jpg) no-repeat center center / cover;"></div>
 						<div class="product__info">
 							<div class="product__title">
 								Resina
 							</div>
 							<p class="product__text">
-								Коллекция Resina - это захватывающие контрасты между материалом и цветом. Идеальная цветовая палитра для создания урбанистических пространств. Нейтральные теплые тона и простота поверхности придадут интерьеру свежесть и оригинальность.
+								Коллекция Resina - это захватывающие контрасты между материалом и цветом. Идеальная
+								цветовая палитра для создания урбанистических пространств. Нейтральные теплые тона и
+								простота поверхности придадут интерьеру свежесть и оригинальность.
 							</p>
 						</div>
 					</div>
@@ -235,16 +279,23 @@
 			<div class="row">
 				<div class="col">
 					<h2 class="about__title">
-						Федеральная сеть <br><span class="text__orange font-weight-bold">«Бутик итальянской плитки LUCIDO»</span>
+						Федеральная сеть <br><span class="text__orange font-weight-bold">«Бутик итальянской плитки
+							LUCIDO»</span>
 					</h2>
 					<div class="about__subtitle">
-						Федеральная сеть «Бутик итальянской плитки LUCIDO» является лидирующим поставщиком керамической плитки и керамогранита от ведущих производителей Италии с 1998 года. 
+						Федеральная сеть «Бутик итальянской плитки LUCIDO» является лидирующим поставщиком керамической
+						плитки и керамогранита от ведущих производителей Италии с 1998 года.
 					</div>
 					<p class="about__text">
-						В ассортименте представлено более 90% производимого в Италии ассортимента, включая уникальные коллекции, произведенные вручную. Большой выбор керамогранита огромных размеров до 1,6 х 3,2 метра. Еженедельно пополняемая складская программа и уникальная электронная система складского учета позволяет поставлять самые сложные заказы максимально оперативно.
+						В ассортименте представлено более 90% производимого в Италии ассортимента, включая уникальные
+						коллекции, произведенные вручную. Большой выбор керамогранита огромных размеров до 1,6 х 3,2
+						метра. Еженедельно пополняемая складская программа и уникальная электронная система складского
+						учета позволяет поставлять самые сложные заказы максимально оперативно.
 					</p>
 					<p class="about__text">
-						Логистический терминал площадью 8 000 кв. м. предлагает возможность хранения приобретенного товара до 6-ти месяцев. Предоставляются услуги по профессиональной резке керамогранита и плитки. Единая ценовая политика по всей России и максимально возможные скидки от производителей.
+						Логистический терминал площадью 8 000 кв. м. предлагает возможность хранения приобретенного
+						товара до 6-ти месяцев. Предоставляются услуги по профессиональной резке керамогранита и плитки.
+						Единая ценовая политика по всей России и максимально возможные скидки от производителей.
 					</p>
 					<a href="https://www.lucido.eu" class="about__link" target="_blank" id="about__link">
 						Перейти на сайт бутика LUCIDO
@@ -277,30 +328,36 @@
 				</div>
 				<div class="col-md-6 col-lg-3">
 					<div class="footer__privacy">
-						<a href="https://www.lucido.eu/upload/privacy_policy.pdf" class="footer__privacy_link" target="_blank">
+						<a href="https://www.lucido.eu/upload/privacy_policy.pdf" class="footer__privacy_link"
+							target="_blank">
 							Политика конфиденциальности
 						</a>
 					</div>
-					
+
 				</div>
 			</div>
 		</div>
 	</footer>
 	<!-- Yandex.Metrika counter -->
-	<script type="text/javascript" >
-	   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-	   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-	   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+	<script type="text/javascript">
+		(function (m, e, t, r, i, k, a) {
+			m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+			m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+		})
+			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-	   ym(54269692, "init", {
-	        clickmap:true,
-	        trackLinks:true,
-	        accurateTrackBounce:true
-	   });
+		ym(54269692, "init", {
+			clickmap: true,
+			trackLinks: true,
+			accurateTrackBounce: true
+		});
 	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/54269692" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<noscript>
+		<div><img src="https://mc.yandex.ru/watch/54269692" style="position:absolute; left:-9999px;" alt="" /></div>
+	</noscript>
 	<!-- /Yandex.Metrika counter -->
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
+
 </html>
